--- a/config.json
+++ b/config.json
@@ -43,5 +43,5 @@
   "commands_channel_testing": [943064312644251711],
   "star_channel_testing": 1126112077635911700,
 
-  "mode": "testing"
+  "mode": "production"
 }
