--- a/config.json.EXAMPLE
+++ b/config.json.EXAMPLE
@@ -15,5 +15,5 @@
   "commands_channel_testing": [943064312644251711],
   "star_channel_testing": 1126112077635911700,
 
-  "mode": "production"
+  "mode": "testing"
 }
